<resources>
    <string name="app_name">Patos vs Marrecos</string>
    <string name="add_nine_text">+9</string>
    <string name="add_six_text">+6</string>
    <string name="add_three_text">+3</string>
    <string name="zero_text">0</string>
    <string name="team_one_name">marrecos</string>
    <string name="teams_score_title">tentos</string>
    <string name="team_two_name">patos</string>
    <string name="reset_button_text">Zerar</string>
    <string name="team_one_win_title">Time dos Marrecos Venceu !</string>
    <string name="dialog_message">Escolha o que deseja fazer:</string>
    <string name="new_game_text">Nova Partida</string>
    <string name="reset_all_text">Zerar tudo</string>
    <string name="back_text">Voltar</string>
    <string name="reset_all_question">Tem certeza que deseja zerar tudo?</string>
    <string name="yes_text">Sim</string>
    <string name="team_two_win_title">Time dos Patos Venceu !</string>
</resources>
